@@ -1,3 +1,8 @@
+2012-12-18  Ian Lance Taylor  <iant@google.com>
+
+	PR go/55201
+	* lib/go.exp: Revert last patch.
+
 2012-12-18  Richard Biener  <rguenther@suse.de>
 
 	PR middle-end/54838
