@@ -1,3 +1,8 @@
+2012-12-18  Ian Lance Taylor  <iant@google.com>
+
+	PR go/55201
+	* gospec.c: Revert last patch.
+
 2012-12-18  Andreas Schwab  <schwab@linux-m68k.org>
 
 	PR go/55201
